[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/res/ui/power_module.tres" type="Texture" id=1]
[ext_resource path="res://scenes/PowerFactory/PowerFactory.gd" type="Script" id=2]
[ext_resource path="res://sprites/res/base_font_12px.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/res/ui/view_perks_on.tres" type="Texture" id=4]
[ext_resource path="res://scenes/PowerFactory/power_factory_texture.tres" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 112, 80, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 144, 80, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 176, 80, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 208, 80, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "powered",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 112, 112, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 144, 112, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 176, 112, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 208, 112, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "lights",
"speed": 12.0
} ]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="PowerFactory" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "lights"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 96.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 10.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 10.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "ENEMY"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 10.0
size_flags_horizontal = 11
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 96.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
max_value = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
